fixing contrast in home page

--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -62,7 +62,7 @@
 
 .signInSignUpLinks a {
     text-decoration: none;
-    color: #007bff;
+    color: #0359b6;
     font-weight: 500;
 }
 
